--- a/styles/g3_architects.css
+++ b/styles/g3_architects.css
@@ -1,4 +1,4 @@
-/* embedding fonts */
+/* EMBEDDING FONTS */
 @import url('https://fonts.googleapis.com/css2?family=Work+Sans:ital,wght@0,100..900;1,100..900&display=swap');
 .work-sans-font {
   font-family: "Work Sans", sans-serif;
@@ -6,3 +6,82 @@
   font-weight: 400;
   font-style: normal;
 }
+/* UNIVERSALLY SHARED STYLES STARTS */
+.display-flex{
+  display: flex;
+}
+/* dark_02 */
+.text-gray{
+  color: #424242;
+}
+/* dark_03 */
+.text-light-gray{
+  color: #727272;
+}
+/* button */
+.btn-primary{
+  background-color: #FF900E;
+  color: white;
+  padding: 20px 25px;
+  font-weight: 600;
+  font-size: 1.25rem;
+  border-radius: 8px;
+  border: none;
+}
+/* primary background */
+.bg-light{
+  background-color: rgba(255, 144, 14, 0.1);
+}
+/* secondary background */
+
+/* UNIVERSALLY SHARED STYLES ENDS */
+
+/* navbar & banner styling section starts */
+/* header section styling */
+
+/* banner related styles */
+.banner-content{
+  max-width: 850px;
+  margin: 0 auto;
+  text-align: center;
+  margin-bottom: 50px;
+}
+.banner-title{
+  font-weight: 700;
+  font-size: 4rem;
+}
+.banner-image{
+  width: 100%;
+}
+/* shared by .navbar & .banner */
+.navbar, .banner{
+  max-width: 1440px;
+  margin: 0 auto;
+}
+/* navbar section styling */
+.navbar{
+  justify-content: space-between;
+  align-items: center;
+}
+.brand{
+  font-weight: 700;
+  font-size: 2.8125rem;
+}
+.nav-links{
+  
+}
+.nav-item{
+  list-style: none;
+  margin-right: 30px;
+}
+.nav-link{
+  text-decoration: none;
+  font-weight: 500;
+}
+/* responsive media query for navbar & banner section */
+@media screen and (max-width: 576px) {
+  .navbar, .nav-links{
+    flex-direction: column;
+  }
+}
+/* navbar & banner styling section ends */
