--- a/styles/g3_architects.css
+++ b/styles/g3_architects.css
@@ -104,7 +104,7 @@ main > section{
 }
 /* navbar & banner part styling ends */
 
-/* team, features & facts part styling */
+/* team, features, facts & sponsors part styling */
 /* team & features section related styles */
 .teams{
   align-items: center;
@@ -121,14 +121,70 @@ main > section{
 #quick-list{
   font-weight: 500;
 }
-/* responsive media query for team, features & facts part styling */
+/* facts section related styles */
+.some-facts > h3{
+  margin-bottom: 24px;
+}
+.facts-container{
+  display: grid;
+  grid-template-columns: repeat(4,1fr);
+  /* border: 1px solid #FF900E; */
+  justify-items: center;
+}
+.fact-card{
+  width: 242px;
+  height: 242px;
+  border: 1px solid #FF900E;
+  border-radius: 8px;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+}
+.fact-number{
+  font-size: 2.8125rem;
+  font-weight: 600;
+  margin-top: 10px;
+  margin-bottom: 5px;
+}
+.fact-name{
+  font-size: 1.25rem;
+  font-weight: 600;
+  margin-top: 5px;
+}
+.fact-description{
+  max-width: 540px;
+  text-align: start;
+  margin-bottom: 100px;
+}
+/* sponsors section related styles */
+.sponsors-info{
+  max-width: 540px;
+  margin: 50px auto;
+  text-align: center;
+}
+.sponsor-companies{
+  display: grid;
+  grid-template-columns: repeat(5,1fr);
+}
+.sponsor-companies img{
+  filter: grayscale(100%);
+}
+/* responsive media query for team, features, facts & sponsors part styling */
 /* for extra small devices */
 @media screen and (max-width: 576px) {
   .teams{
     flex-direction: column;
   }
-  .team-img-container{
+  .team-img-container, .facts-container, .sponsor-companies{
     grid-template-columns: repeat(1,1fr);
+  }
+  .facts-container{
+    gap: 24px;
+    justify-items: center;
+  }
+  .sponsor-companies{
+    gap: 50px;
+    justify-items: center;
   }
   .our-features{
     margin: 24px auto 0;
@@ -138,6 +194,11 @@ main > section{
 @media screen and (min-width: 576px) and (max-width: 992px) {
   .teams{
     flex-direction: column;
+  }
+  .facts-container, .sponsor-companies{
+    grid-template-columns: repeat(2,1fr);
+    gap: 50px;
+    justify-items: center;
   }
   .our-features{
     margin: 24px auto 0;
