--- a/styles/g3_architects.css
+++ b/styles/g3_architects.css
@@ -121,6 +121,46 @@ main > section{
 #quick-list{
   font-weight: 500;
 }
+/* lovable & enjoyable features section related styles */
+.features{
+  gap: 146px;
+  align-items: center;
+}
+.featured-text{
+  height: 982px;
+  aspect-ratio: 293/491;
+}
+#feature-section-title{
+  border-left: 5px solid #FF900E;
+  padding-left: 20px;
+}
+.feature-card{
+  border-radius: 8px;
+  padding: 30px;
+  box-shadow: 0 4px 30px 0 rgba(0, 0, 0, 0.06);
+  margin-bottom: 20px;
+}
+.feature-card .feature-title{
+  font-weight: 600;
+  font-size: 1.25rem;
+  margin: 0;
+}
+.featured-architect img{
+  width: 100%;
+}
+#experience-badge{
+  margin-left: -92px;
+  margin-top: -123px;
+  padding: 45px 42px;
+}
+#experience-years{
+  font-size: 4.0625rem;
+  font-weight: 700;
+}
+#experience{
+  font-size: 1.5625rem;
+  font-weight: 500;
+}
 /* facts section related styles */
 .some-facts > h3{
   margin-bottom: 24px;
@@ -172,7 +212,7 @@ main > section{
 /* responsive media query for team, features, facts & sponsors part styling */
 /* for extra small devices */
 @media screen and (max-width: 576px) {
-  .teams{
+  .teams, .features{
     flex-direction: column;
   }
   .team-img-container, .facts-container, .sponsor-companies{
@@ -189,10 +229,19 @@ main > section{
   .our-features{
     margin: 24px auto 0;
   }
+   .featured-architect{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+   }
+   #experience-badge{
+    margin: 20px auto;
+  }
 }
 /* for small & medium devices */
 @media screen and (min-width: 576px) and (max-width: 992px) {
-  .teams{
+  .teams, .features{
     flex-direction: column;
   }
   .facts-container, .sponsor-companies{
@@ -202,5 +251,14 @@ main > section{
   }
   .our-features{
     margin: 24px auto 0;
+  }
+  .featured-architect{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+   }
+   #experience-badge{
+    margin: 20px auto;
   }
 }
