--- a/styles/g3_architects.css
+++ b/styles/g3_architects.css
@@ -49,13 +49,9 @@ main > section{
 .bg-light{
   background-color: rgba(255, 144, 14, 0.1);
 }
-/* secondary background */
-
 /* UNIVERSALLY SHARED STYLES ENDS */
 
 /* navbar & banner part styling starts */
-/* header related styles */
-
 /* banner related styles */
 .banner-content{
   max-width: 850px;
@@ -84,9 +80,6 @@ main > section{
   font-weight: 700;
   font-size: 2.8125rem;
 }
-.nav-links{
-  
-}
 .nav-item{
   list-style: none;
   margin-right: 30px;
@@ -104,7 +97,7 @@ main > section{
 }
 /* navbar & banner part styling ends */
 
-/* team, features, facts & sponsors part styling */
+/* team, features, facts & sponsors part styling starts */
 /* team & features section related styles */
 .teams{
   align-items: center;
@@ -124,11 +117,6 @@ main > section{
 /* lovable & enjoyable features section related styles */
 .features{
   gap: 146px;
-  align-items: center;
-}
-.featured-text{
-  height: 982px;
-  aspect-ratio: 293/491;
 }
 #feature-section-title{
   border-left: 5px solid #FF900E;
@@ -262,3 +250,22 @@ main > section{
     margin: 20px auto;
   }
 }
+/* team, features, facts & sponsors part styling starts */
+
+/* footer styling starts */
+.copyright{
+  max-width: 1440px;
+  height: 65px;
+  margin: 0 auto;
+  justify-content: center;
+  align-items: center;
+  margin-top: 100px;
+}
+/* responsive media query for footer styling */
+/* for extra small devices */
+@media screen and (max-width: 576px) {
+  .copyright{
+    text-align: center;
+  }
+}
+/* footer styling ends */
